<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_view_type"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Asunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jua"
        android:text="@string/lbl_asunto"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/concept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jua"
        android:text="@string/lbl_notastransferencia"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/Asunto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/lbl_fecha"
        android:textColor="@color/material_dynamic_neutral40"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/Asunto"
        app:layout_constraintTop_toBottomOf="@+id/Asunto" />

    <TextView
        android:id="@+id/ammount_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/jua"
        android:text="@string/txt_saldo"
        android:textColor="@color/negro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>