<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.HomePageEmptyCaseActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@drawable/home_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/lbl_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/jua"
            android:text="@string/txt_inicio"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:alpha="0.5"
            android:fontFamily="@font/jua"
            android:text="@string/txt_saludo"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/lbl_inicio"
            app:layout_constraintTop_toBottomOf="@+id/lbl_inicio" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/jua"
            android:text="@string/txt_balance"
            android:textColor="@color/blanco"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/txt_user_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_name" />

        <TextView
            android:id="@+id/saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/jua"
            android:text="@string/txt_saldo"
            android:textColor="@color/blanco"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <ImageView
            android:id="@+id/fotoperfil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile_picture" />

        <ImageView
            android:id="@+id/ico_notificacion"
            android:layout_width="31dp"
            android:layout_height="35dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="@+id/fotoperfil"
            app:layout_constraintTop_toBottomOf="@+id/fotoperfil"
            app:srcCompat="@drawable/notifications__icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_enviar"


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/path"
                android:text="@string/btn_enviar"
                style="@style/boton_verde"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/btn_ingresar"
                android:backgroundTint="@color/azul"
                android:drawableLeft="@drawable/request_icon"
                style="@style/boton_azul"
                android:fontFamily="@font/jua"
                android:textSize="15sp"
                android:textColor="@color/blanco"/>
        </LinearLayout>

        <TextView
            android:id="@+id/lbl_transacciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_transacciones"
            android:fontFamily="@font/jua"
            android:textSize="17sp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    app:srcCompat="@drawable/empty_illustration" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_registro_transacciones"
                    android:fontFamily="@font/jua"
                    android:textSize="18sp"
                    android:alpha="0.5"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>